# EXB_DEV_CLI

./: pyproject.toml
exb_dev_cli/: AppConfig.py  ApplicationRepo.py  ExperienceBuilderInstallation.py  applications.json  cli.py  symlink_test.ps1  versions.json
exb_dev_cli/utils/: app_manager.py  config.py  symlinks.py
tests/: test_app_manager.py
