[project]
name = "exb-dev-cli"
version = "0.1.0"
description = "A package used to help manage ArcGIS Experience Developer Edition installations and the applications that are developed using it in version control."
authors = [
    {name = "Ryan.Ulsberger",email = "ryan.ulsberger@piercecountywa.gov"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pytest (>=8.3.4,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
